# afrr-remuneration

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  tests.py
.github/workflows/: publish.yml
afrr_remuneration/: aFRR.py  data.py  test_validation.py
